Remove gallery elements

--- a/components/components/blog-section/blog-section.bookshop.toml
+++ b/components/components/blog-section/blog-section.bookshop.toml
@@ -6,7 +6,7 @@ icon = "wysiwyg"
 tags = ["Content"]
 
 [props]
-title = "Recent Works"
+title = "Blog"
 description_html = "Posts from Jessica White on tech, management and life."
 link_url = "/blog"
 show_posts = true
