--- a/components/components/hero/hero.bookshop.toml
+++ b/components/components/hero/hero.bookshop.toml
@@ -7,10 +7,8 @@ tags = ["Structure", "Text", "Links"]
 
 [props]
 title = "Hi, I am Jessica"
-description_html = "<strong>Photographer</strong> and <strong>Visual Content Strategist</strong> from Albany. I work as a lifestyle, product, and landscape photographer, creating images for a diverse range of requests, from online media to printed artwork."
+description_html = "<p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Principal Technical Architect, am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p>"
 image = "/images/01.jpg"
-image_alt = "Jessica Whites's picture"
+image_alt = "Jessica White's picture"
 cta_button = "Get in touch"
 cta_button_link = "#contact"
-works_button = "See my works"
-works_button_link = "#projects"
