--- a/site/_config.yml
+++ b/site/_config.yml
@@ -2,10 +2,10 @@ title: Jess White
 
 plugins:
   - jekyll-bookshop
-  - cloudcannon-jekyll-bookshop
   - jekyll-sitemap
   - jekyll/tagging
   - jekyll-pagebreak
+  - cloudcannon-jekyll
 
 # Multiple bookshops can be used on one website,
 # or different production / staging locations.
