Edit content of pages (#1)
* Add gallery images to repository

* Remove gallery elements

* Update content of About page

* Add to Activity page

* Add 2020 blog posts

* Add 2019 blog posts

--- a/site/_data/navigation.yml
+++ b/site/_data/navigation.yml
@@ -8,9 +8,5 @@ menu__settings:
       url: '/blog/'
     - title: 'Activity'
       url: '/activity/'
-    - title: 'Pages'
-      submenu:
-      - url: '/about/'
-        title: 'About'
-      - url: '/elements/'
-        title: 'Elements'
+    - title: 'About'
+      url: '/about/'
