--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true
 
-    - name: Build
+    - name: Install Packages
       run: |
         npm run install-jekyll
+
+    - name: Build Site
+      run: |
+        npm run build-jekyll
