--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bookshop-live": "bookshop-live -b ./components -o site/_cloudcannon/bookshop-live.js",
     "jekyll": " bundle exec jekyll serve --source site --port 6060 --trace --unpublished",
     "start": "run-p bookshop-dev jekyll",
-    "install-jekyll": "bundle install"
+    "install-jekyll": "bundle install",
+    "build-jekyll": "bundle exec jekyll build"
   },
   "repository": {
     "type": "git",
