--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,10 @@ jobs:
         npm run install-jekyll
 
     - name: Build Jekyll
+      working-directory: ./site
       run: |
-        npm run build-jekyll
+        bundle exec jekyll build
+
 
     - name: Set AWS CLI	
       env:	
@@ -41,7 +43,7 @@ jobs:
 
     - name: Deploy To S3
       run: |
-        aws s3 sync ./_site/ s3://jesswhite.co.uk/  --delete
+        aws s3 sync ./site/_site/ s3://jesswhite.co.uk/  --delete
         echo "Deployed to S3"
 
     - name: Invalidate CloudFront cache
