--- a/site/_config.yml
+++ b/site/_config.yml
@@ -81,14 +81,4 @@ defaults:
 # Tags
 tag_page_dir: tag
 tag_page_layout: tag_page
-tag_permalink_style: /:title
-
-pagination:
-  enabled: true
-  per_page: 6
-  offset: 2
-  permalink: '/blog/page/:num/'
-  title: ':title - page :num of :max'
-  limit: 0
-  sort_field: 'date'
-  sort_reverse: true
+tag_permalink_style: /:title/
