--- a/site/_data/social_links.yml
+++ b/site/_data/social_links.yml
@@ -3,6 +3,7 @@
 # Example of adding a new link to the footer - {icon: "ion-logo-facebook", link: "https://facebook.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
+- {icon: "Mastodon", link: https://hachyderm.io/@jesswhite"}
 - {icon: "Twitter", link: https://twitter.com/JessPWhite"}
 - {icon: "Github", link: "https://github.com/wordshaker"}
 - {icon: "LinkedIn", link: "https://www.linkedin.com/in/jessica-white-67917883"}
