--- a/components/components/hero/hero.bookshop.yml
+++ b/components/components/hero/hero.bookshop.yml
@@ -30,8 +30,8 @@ preview:
     from online media to printed artwork.
   image: /images/01.jpg
   image_alt: Jessica Whites's picture
-  cta_button: Get in touch
-  cta_button_link: "#contact"
+  cta_button: LinkedIn
+  cta_button_link: "https://www.linkedin.com/in/jessica-w-67917883/"
   works_button: See my works
   works_button_link: "#projects"
 
