--- a/components/components/hero/hero.bookshop.toml
+++ b/components/components/hero/hero.bookshop.toml
@@ -9,6 +9,6 @@ tags = ["Structure", "Text", "Links"]
 title = "Hi, I am Jessica"
 description_html = "<p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Principal Technical Architect, am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p>"
 image = "/images/01.jpg"
-image_alt = "Jessica White's picture"
+image_alt = "Jessica Brentnall's picture"
 cta_button: "LinkedIn"
-cta_button_link: "https://www.linkedin.com/in/jessica-w-67917883/"
+cta_button_link: "https://www.linkedin.com/in/jessica-b-67917883/"
