--- a/site/_data/author.yml
+++ b/site/_data/author.yml
@@ -1,4 +1,4 @@
 #-------------------------------
 # Author Settings
-author_name: Jessica White
+author_name: Jessica Brentnall
 author_image: '/images/avatar.jpg'
