--- a/components/components/blog-section/blog-section.bookshop.toml
+++ b/components/components/blog-section/blog-section.bookshop.toml
@@ -7,6 +7,6 @@ tags = ["Content"]
 
 [props]
 title = "Blog"
-description_html = "Posts from Jessica White on tech, management and life."
+description_html = "Posts from Jessica Brentnall on tech, management and life."
 link_url = "/blog"
 show_posts = true
