--- a/components/components/blog-section/blog-section.bookshop.yml
+++ b/components/components/blog-section/blog-section.bookshop.yml
@@ -18,7 +18,7 @@ blueprint:
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   title: Recent Works
-  description_html: Posts from Jessica White on tech, management and life.
+  description_html: Posts from Jessica Brentnall on tech, management and life.
   link_url: /blog
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
