--- a/components/components/hero/hero.bookshop.yml
+++ b/components/components/hero/hero.bookshop.yml
@@ -29,9 +29,9 @@ preview:
     landscape photographer, creating images for a diverse range of requests,
     from online media to printed artwork.
   image: /images/01.jpg
-  image_alt: Jessica Whites's picture
+  image_alt: Jessica Brentnall's picture
   cta_button: LinkedIn
-  cta_button_link: "https://www.linkedin.com/in/jessica-w-67917883/"
+  cta_button_link: "https://www.linkedin.com/in/jessica-b-67917883/"
   works_button: See my works
   works_button_link: "#projects"
 
