--- a/site/_data/general_settings.yml
+++ b/site/_data/general_settings.yml
@@ -1,5 +1,5 @@
-title: Jessica White
-description: Personal website of Jessica White
+title: Jessica Brentnall
+description: Personal website of Jessica Brentnall
 social_media_share_image: /images/01.jpg
 disqus-identifier:
 google-analytics:
